<resources>
    <string name="app_name">Save Money</string>
    <string name="title_activity_child">Activity child</string>
    <string name="action_add">Добавить расход</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sum_of_day">Сумма на день:</string>
    <string name="sum_of_day_with_remain">На день с учетом остатка:</string>
    <string name="costs">Расходы:</string>
    <string name="saving">Экономия всего:</string>
    <string name="default_sum">0.00</string>
    <string name="remain_of_day">(остаток на день)</string>
    <string name="remain_of_day_with_remain">(остаток на день с учетом экономии)</string>
    <string name="add_expense">Добавить статью расхода</string>
    <string name="expense_label">Статья расходов</string>
    <string name="choose">Выбрать</string>
    <string name="add">Добавить</string>
    <string name="category_label">Категория</string>
    <string name="expense_name">Статья расхода</string>
    <string name="parent_category_label">Родительская категория</string>
    <string name="expense_category">Категория расхода</string>
</resources>
