<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fragment_main_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sum_of_day" />

                <TextView
                    android:id="@+id/fragment_main_sum_of_day"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/default_sum"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sum_of_day_with_remain" />

                <TextView
                    android:id="@+id/fragment_main_sum_of_day_with_remain"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/default_sum"
                    android:textAlignment="textEnd" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remain_of_day"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/fragment_main_remain_of_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:gravity="bottom"
                android:text="@string/default_sum"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_main_remain_of_day_with_remain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/default_sum"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remain_of_day_with_remain"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/costs" />

                <TextView
                    android:id="@+id/fragment_main_cost"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/default_sum"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saving" />

                <TextView
                    android:id="@+id/fragment_main_saving"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/default_sum"
                    android:textAlignment="textEnd" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_main_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>